--- a/client/scss/components/_logo.scss
+++ b/client/scss/components/_logo.scss
@@ -92,7 +92,8 @@
     }
 }
 
-.wagtail-logo-container-inner {
+.wagtail-logo-container-inner,
+.wagtail-logo-container__desktop.animated-logo-container {
     display: block;
     transition: all 0.25s cubic-bezier(0.28, 0.15, 0, 2.1);
 
